tests/negative/gold/type_post_increment_test.gold
tests/negative/type_post_increment_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/type_post_increment_test.toit:8:4: error: Type mismatch. Expected 'string'. Got 'int'
  a++
   ^~
tests/negative/type_post_increment_test.toit:8:4: error: Can't use value that is typed 'none'
  a++
   ^~
Compilation failed.
